# science

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt_old  datasource.cpp  datasource.h  demo.qml  main.cpp  main.qml  sensordata.cpp  sensordata.h  toolchain-imx6.cmake
QController/: ButtonTest.cpp  ButtonTest.h  CMakeLists.txt  FindGTK3.cmake  Params.cpp  Params.h  QEnumerableMap.cpp  QEnumerableMap.h  c.c  configSensor.cpp  configSensor.h  devicedata.cpp  devicedata.h  i2ccontroller.cpp  i2ccontroller.h  scene.cpp  scene.h  videocontrollerbase.cpp  videocontrollerbase.h
QController/comcpp/: .gitmodules  CMakeLists.txt  comcpp.pro
QController/comcpp/src/: CMakeLists.txt  baseConfig.cpp  baseConfig.h  circularqvector.cpp  circularqvector.h  comcpp.cpp  comcpp.h  comcpp.pro  mqtextstream.cpp  mqtextstream.h  persistent.cpp  persistent.h  qqmlreadonlypropertymap.cpp  qqmlreadonlypropertymap.h  types.h  utils.cpp  utils.h
QController/comcpp/src/c_class/: .gitignore  CMakeLists.txt  README.md
QController/comcpp/src/c_class/Backlight/: CMakeLists.txt  backlight_driver.cpp  backlight_driver.h  backlight_pwm.cpp  backlight_pwm.h  backlightinterface.cpp  backlightinterface.h  screenlight.cpp  screenlight.h
QController/comcpp/src/c_class/Gpio/: CMakeLists.txt  GPIO.cpp  GPIO.h  GPIOSysfs.cpp  GPIOSysfs.h  gpiointerface.cpp  gpiointerface.h
QController/comcpp/src/c_class/I2C/: BoardModule.cpp  BoardModule.h  Board_FHD.cpp  Board_FHD.h  CMakeLists.txt  ConnModule.cpp  ConnModule.h  Fpga_fhd.cpp  Fpga_fhd.h  I2C.cpp  I2C.h  charge.cpp  charge.h  chargeinterface.cpp  chargeinterface.h  i2cpacket.cpp  i2cpacket.h  stc3115_Battery.h  stc3115_Driver.cpp  stc3115_Driver.h
QController/comcpp/src/c_class/Rest/: CMakeLists.txt  DateModule.cpp  DateModule.h  FlashCard.cpp  FlashCard.h  PhysInterface.cpp  PhysInterface.h  crc.cpp  crc.h  defs.cpp  defs.h  loggable.cpp  loggable.h
QController/comcpp/src/c_class/SPI/: CMakeLists.txt  MCU.cpp  MCU.h  SPI.cpp  SPI.h  spipacket.cpp  spipacket.h  spipacketdemo.cpp  spipacketplatform.cpp
QController/comcpp/src/c_class/Serial/: CMakeLists.txt  CameraHead.cpp  CameraHead.h  Serial.cpp  Serial.h
QController/comcpp/src/enumerables/: CMakeLists.txt  enumerable.h  qenumerable.cpp  qenumerable.h  qenumerablefloat.cpp  qenumerablefloat.h  qenumerableint.cpp  qenumerableint.h  qenumerablestring.cpp  qenumerablestring.h
QController/comcpp/src/failureHandling/: CMakeLists.txt  failure.cpp  failure.h
QController/comcpp/src/lineeditor/: CMakeLists.txt  PointDelegate.qml  PointDelegateForm.ui.qml  PointSpinBox.qml  basecurve.cpp  basecurve.h  basecurvemodel.cpp  basecurvemodel.h  editablecurvemodel.cpp  editablecurvemodel.h  linefile.cpp  linefile.h  parametrizedcurvemodel.cpp  parametrizedcurvemodel.h  spline.cpp  spline.h  splinecurve.cpp  splinecurve.h
QController/comcpp/src/qio/: CMakeLists.txt  qioabstract.cpp  qioabstract.h  qiorequestresponse.cpp  qiorequestresponse.h  qiotransactionbase.cpp  qiotransactionbase.h  qserialsettings.cpp  qserialsettings.h
QController/comcpp/src/qtlog/: CMakeLists.txt  Log.qml  log.cpp  log.h  logfilemodel.cpp  logfilemodel.h  logmodel.cpp  logmodel.h  logmodelbase.cpp  logmodelbase.h  logsortfiltermodel.cpp  logsortfiltermodel.h  qloggable.cpp  qloggable.h  qloggableobject.cpp  qloggableobject.h  qmldir  qtlog.qrc
QController/comcpp/src/smartcontrol/: CMakeLists.txt  cardsdatabase.cpp  cardsdatabase.h  exchangecardbase.cpp  exchangecardbase.h  record.cpp  record.h  sccontrollerbase.cpp  sccontrollerbase.h  scdefs.cpp  scdefs.h
QController/comcpp/tests/: testConfig.pri  test_circularqvector.cpp  test_circularqvector.h
QController/comcpp/tests/auto/: auto.pro
QController/comcpp/tests/auto/testField/: testField.pro  tst_testfield.cpp
QController/comcpp/tests/auto/testRecord/: testRecord.pro  tst_testrecord.cpp
QController/comcpp/tests/auto/testRecordData/: testRecordData.pro  tst_testrecorddata.cpp
QController/comcpp/tests/auto/testUtils/: testUtils.pro  tst_testutils.cpp
QController/videofiles/: CMakeLists.txt  FindGStreamer.cmake  Names.cpp  Names.h  README.md  VideoApp.cpp  VideoApp.h  VideoAppInterface.cpp  VideoAppInterface.h  VideoInterface.cpp  VideoInterface.h  VideoRecord.cpp  VideoRecord.h  VideoRecordTranslation.cpp  VideoRecordTranslation.h  VideoShow.cpp  VideoShow.h  VideoSnapshot.cpp  VideoSnapshot.h
content/Delegates/: AndroidDelegate.qml  AppPageView.qml  AppParamView.qml  ParamDelegate.qml
content/FileSystem/: Content.qml  FileBrowser.qml  ImageFile.qml  VideoItem.qml  VideoSeek.qml
content/MenuClasses/: MenuBool.qml  MenuDate.qml  MenuEnabler.qml  MenuIP.qml  MenuInt.qml  MenuLoader.qml  MenuMap.qml
content/MenuOptions/Button/: Buttons.qml
content/MenuOptions/Pictures/: AERegion.qml  AETarget.qml  BrightGain.qml  ColorGain.qml  ContrastGain.qml  Exposure.qml  Gamma.qml  GammaOn.qml  HueGain.qml  ImageRate.qml  ImageSize.qml  SharpGain.qml  WBBlue.qml  WBRed.qml  WhiteBalance.qml
content/MenuOptions/Record/: PhotoName.qml  RecordName.qml  RecordQuality.qml  RecordSize.qml  RecordStart.qml
content/MenuOptions/Scene/: SaveScene.qml
content/MenuOptions/Service/: Date.qml  FactoryReset.qml  Language.qml  ShowPopups.qml  Volume.qml
content/MenuOptions/Translation/: GateIP.qml  IPAllocation.qml  OwnIP.qml  TranslationStart.qml
content/MenuOptions/Usb/: Browser.qml  Correction.qml  USBBlock.qml  USBStatus.qml
content/Pages/: BPFPage.qml  DataPage.qml  LogPage.qml  MainPage.qml  MenuPage.qml  SDataPage.qml  SecondPage.qml  ThirdPage.qml  ThirdPage1.qml
content/Popups/: Close.qml  Process.qml
content/Regulators/: Address.qml  Button.qml  Date.qml  Enabler.qml  FileBrowser2.qml  ItemSelector.qml  Regulator.qml  Switcher.qml
